--- a/05gy_cpp/05gy_cpp.tex
+++ b/05gy_cpp/05gy_cpp.tex
@@ -153,7 +153,7 @@ int main()
 	\begin{figure}[H]
 		\centering
 		\input{../img/list_rep.tikz}
-		\caption{A fenti képen egy listaelem, a lentin egy adatként \texttt{int}-et tároló 4 elemű láncolt lista. Figyeljük meg, hogy az utolsó elem pointere nullpointer.}\label{list-example}
+		\caption{A fenti képen egy listaelem, a lentin egy adatként \texttt{int}-et tároló 4 elemű láncolt lista. Figyeljük meg, hogy az utolsó elem pointere nullpointer.}\label{fig_list-example}
 	\end{figure}
 	\subsection{Struct-ok}
 	Egy láncolt lista elemét implementálhatjuk pl. így:
@@ -495,7 +495,7 @@ int main()
 		\centering
 		\input{../img/list_copy_ctor_wrong.tikz}
 		
-		\caption{A lista másolása default másoló konstruktorral. Zárójelben a lista első elemének \texttt{data} adattagjának értéke.}\label{list_copy_ctor_wrong}
+		\caption{A lista másolása default másoló konstruktorral. Zárójelben a lista első elemének \texttt{data} adattagjának értéke.}\label{fig_list_copy_ctor_wrong}
 	\end{figure}
 	
 	A megoldás egy saját másoló konstruktor bevezetése!
@@ -528,7 +528,7 @@ int main()
 	\begin{figure}[!h]
 		\centering
 		\input{../img/list_copy_ctor_correct.tikz}
-		\caption{A lista másolása az általunk implementált másoló konstruktorral.}\label{list_copy_ctor_correct}
+		\caption{A lista másolása az általunk implementált másoló konstruktorral.}\label{fig_list_copy_ctor_correct}
 	\end{figure}
 	
 	\medskip
