--- a/09gy_cpp/09gy_cpp.tex
+++ b/09gy_cpp/09gy_cpp.tex
@@ -481,7 +481,7 @@ int main()
 		\centering
 		\input{../img/std_set.tikz}
 		
-		\caption{Az \texttt{std::set} egy lehetséges ábrázolása, bináris keresőfával. Erre az irányított gráfra igaz, hogy minden gyökér a bal oldali gyerekénél nagyobb, és a jobb oldali gyerekénél kisebb.}\label{std_set_fig}
+		\caption{Az \texttt{std::set} egy lehetséges ábrázolása, bináris keresőfával. Erre az irányított gráfra igaz, hogy minden gyökér a bal oldali gyerekénél nagyobb, és a jobb oldali gyerekénél kisebb.}\label{fig_std_set}
 	\end{figure}
 	\subsection{list}
 	Az \texttt{std::list} konténer a \texttt{<list>} könyvtár része, és nagyon hasonló ahhoz, mint amit mi írtunk, viszont létezik fejelemmel, és kétirányú.
@@ -552,7 +552,7 @@ int main()
 		\centering
 		\input{../img/std_map.tikz}
 		
-		\caption{Az \texttt{std::map} egy lehetséges ábrázolása, bináris keresőfával. Az ábrán egy \texttt{std::string, int} párosokat tároló \texttt{map} szerepel -- figyeljük meg, hogy a a konténer a kulcs szerint rendez, az értékek a rendezés szempontjából nem számítanak.}\label{std_map}
+		\caption{Az \texttt{std::map} egy lehetséges ábrázolása, bináris keresőfával. Az ábrán egy \texttt{std::string, int} párosokat tároló \texttt{map} szerepel -- figyeljük meg, hogy a a konténer a kulcs szerint rendez, az értékek a rendezés szempontjából nem számítanak.}\label{fig_std_map}
 	\end{figure}
 	Van egy speciális beszúró függvénye is:
 \begin{lstlisting}
