Moved the ELTE logo into the img/ directory

--- a/cpp_book/cpp_book.tex
+++ b/cpp_book/cpp_book.tex
@@ -83,7 +83,7 @@
 	\begin{titlepage}
 		\vspace*{2cm}
 		\centering
-		\includegraphics[width=5cm]{elte_cimer}
+		\includegraphics[width=5cm]{../img/elte_cimer}
 		
 		\vspace*{2cm}
 		{\Huge Programozási Nyelvek: C++ }
