Started maintaining TikZ codes.

--- a/05gy_cpp/05gy_cpp.tex
+++ b/05gy_cpp/05gy_cpp.tex
@@ -106,26 +106,9 @@ int main()
 	A mutató által mutatott területet a \texttt{delete} operátorral tudjuk felszabadítani.
 	\begin{figure}[!h]
 		\centering
-		\begin{tikzpicture}
-		\tikzstyle{Heap} = [rectangle, minimum width=4cm, minimum height=2cm, text centered, draw=black, fill=white]
-		\tikzstyle{Stack} = [rectangle, minimum width=3cm, minimum height=1cm, text centered, draw=black, fill=white]
-		\tikzstyle{ListNode} = [rectangle, minimum width=2cm, minimum height=5mm, text centered, draw=black, fill= gray!20]
-		\tikzstyle{arrow} = [thick,->,>=stealth]
+		\input{../img/heap_example.tikz}
 		
-		%\foreach \x in {-2,-1,0,1,2,3,4}
-		%	\draw (\x cm,1pt) -- (\x cm,-1pt) node[anchor=north] {$\x$};
-		%\foreach \y in {-2,-1,0,1,2,3,4}
-		%	\draw (1pt,\y cm) -- (-1pt,\y cm) node[anchor=east] {$\y$};
-		%\draw[step=5mm,gray,very thin] (-2,-2) grid (6,6);
-		
-		\draw [thick, black] (-3, 0) -- (-1, 0);
-		\draw [thick, black] (-3, 0) -- (-3, 2);
-		\draw [thick, black] (-1, 0) -- (-1, 2);
-		\node[Heap] at (3,1){};
-		\node (2) [ListNode] at (3.2,1.25) {2};
-		\node (p) [ListNode] at (-2,0.25) {p};
-		\draw[arrow] (p) -- (2);
-		\end{tikzpicture}
+		\caption{Példa a heap működésére: \texttt{p} egy, a heapen lefoglalt memóriacímre mutat.}\label{fig_heap_example}
 	\end{figure}
 	
 	A heapen nincs a lefoglalt területnek nevük, így mindig szükségünk lesz egy mutatóra, hogy tudjunk rá hivatkozni. \textbf{Ha egyszer lefoglalunk valamit a heap-en, gondoskodni kell arról, hogy felszabadítsuk.} Az egyik leggyakoribb hiba a dinamikus memóriakezelésnél, ha a memóriát nem szabadítjuk fel. Ilyenkor a lefoglalt memóriaterületre hivatkozni már nem tudunk de lefoglalva marad: elszivárog (\textit{memory leak}). 
