Some more progress on TikZ code maintencance

--- a/cpp_book/cpp_book.tex
+++ b/cpp_book/cpp_book.tex
@@ -80,9 +80,16 @@
 	fill= gray!20
 ]
 
+\tikzstyle{arrow} = [
+	thick,
+	->,
+	>=stealth
+]
+
 \tikzstyle{Pointer} = [rectangle, minimum width=5mm, minimum height=6mm, text centered, draw=black, fill= gray!20]
 
-\tikzstyle{arrow} = [thick,->,>=stealth]
+\tikzstyle{Sikidom} = [rectangle, minimum width=2cm, minimum height=10mm, text centered, draw=black, line width = 2pt]
+\tikzstyle{Kor} = [rectangle, minimum width=2cm, minimum height=15mm, text centered, draw=red, line width = 3pt]
 %%%%%%% TikZ options end %%%%%%%
 
 %%%%%% lstlistings envvironment options start %%%%%%
