--- a/12gy_cpp/12gy_cpp.tex
+++ b/12gy_cpp/12gy_cpp.tex
@@ -553,9 +553,11 @@ public:
 	Így az ötöst is elértük.
 	\begin{thebibliography}{1}
 		
-		\bibitem{xazax} Horváth Gábor gyakorlatai, 2015/2016/2 ill. 2016/2017/1.
+		\bibitem{xazax} Horváth Gábor \textit{Programozási Nyelvek: C++} gyakorlatai, 2015/2016/2 ill. 2016/2017/1.
 		
-		\bibitem{pataki} Pataki Norbert előadásai, 2015/2016/2.
+		\bibitem{pataki} dr. Pataki \textit{Norbert Programozási Nyelvek: C++} előadásai, 2015/2016/2.
+		
+		\bibitem{porkolab} dr. Porkoláb Zoltán Multiparadigmás Programozás előadásai, 2016/2017/2.
 		
 		\bibitem{cppref} Cppreference, \url{http://en.cppreference.com/w/}
 		
