--- a/cpp_book/cpp_book.tex
+++ b/cpp_book/cpp_book.tex
@@ -25,7 +25,8 @@
 	tikz,      % Basepackage for nearly all figures
 	tikz-uml,  % Used for UML diagrams. Package needs to be in the same directory!
 	listings,  % Used for code snippets
-	subfiles   % Used for including subfiles into this document
+	subfiles,  % Used for including subfiles into this document
+	array      % "\setlength{\extrarowheight}{2pt}"
 }
 \usepackage[unicode]{hyperref} % Clickable links
 %%%%%%% Packages required for this document end %%%%%%%
