New directory structure
And I started working on exercises!

--- a/book/07gy_cpp/07gy_cpp.tex
+++ b/book/07gy_cpp/07gy_cpp.tex
@@ -178,7 +178,7 @@ inline void f() {}
 	Az ábra jól demonstrálja a problémát.
 	\begin{figure}[h]
 		\centering
-		\input{../img/inline_func.tikz}
+		\input{inline_func.tikz}
 		
 		\caption{A \texttt{main.cpp}-ben vagy a \texttt{list.cpp}-ben lévő definíciója szerepeljen \texttt{f}-nek a futtatható fájlban?}
 	\end{figure}
